# AudioCodec

./: CMakeLists.txt  PCMCodec.hpp  README.md  WaveCodec.hpp
G711Codec/: G711Codec.hpp
PCMCodec/: CMakeLists.txt  PCMCodec.cpp  PCMCodec.h  PCMFile.cpp  PCMFile.h
WaveCodec/: CMakeLists.txt  WaveFile.cpp  WaveFile.h
example/: CMakeLists.txt  PCMCodecExample.cpp  WaveCodecExample.cpp
test/: test.cpp
